Fix scrollbar css

--- a/Client/GameTimelinePlanner.Client/Pages/TimeLine2.razor.scss
+++ b/Client/GameTimelinePlanner.Client/Pages/TimeLine2.razor.scss
@@ -12,5 +12,6 @@
     }
     &[data-orientation="horizontal"] {
         flex-direction: column;
+        overflow-x:auto;
     }
 }
