--- a/Client/GameTimelinePlanner.Client/Shared/MainLayout.razor.css
+++ b/Client/GameTimelinePlanner.Client/Shared/MainLayout.razor.css
@@ -6,6 +6,7 @@
 
 main {
     flex: 1;
+    overflow: hidden;
 }
 
 .sidebar {
@@ -77,5 +78,12 @@ main {
     .top-row, article {
         padding-left: 2rem !important;
         padding-right: 1.5rem !important;
+    }
+
+
+    article {
+        overflow: auto;
+        width: 100%;
+        height: 100%;
     }
 }
